cleanup style, even more lean

--- a/about.html
+++ b/about.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
 
-  <p>I develop realtime audiovisual softwares</p>
+  <p><br>I develop realtime audiovisual softwares</p>
   <p>&#109;&#97;&#105;&#108;&#64;&#121;&#107;&#101;&#101;&#104;&#46;&#99;&#111;&#109;</p>
   <p><a target="_blank" rel="noopener noreferrer" href="pdf/Resume_Keehong_Youn.pdf">Resume</a>
 
 </div>
 
 </body>
+</html>
