--- a/amp.html
+++ b/amp.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
   <h2>Amp</h2>
@@ -23,11 +22,8 @@
 
   <p>A waterdrop in real world falls into the digital world. In the digital world a impact of drop is repeatedly amplified and a drop of water at start becomes a flow of water in digital world. Then the amplified digital water is returned to the real world, as a powerful waterfall that could influence lot more to the real world compared to what it could have in the beginning as a tiny waterdrop.</p>
 
-  <div>
-    <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/68364214?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-    <!-- <iframe src="https://player.vimeo.com/video/68364214?color=ffffff&byline=0&portrait=0" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-  </div>
+  <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/68364214">Video link (vimeo.com)</a></p>
 
 </div>
-
 </body>
+</html>
