--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
   <h2>Balanced Movement</h2>
@@ -25,19 +24,13 @@
 
   <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained throughout the process. Different visual styles are tested but the idea in common is generation as horizontal component, modification as vertical component, and destruction as circular and erasing component.</p>
 
-  <div class="body-img">
+  <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/181492060">Video link (vimeo.com)</a></p>
+
       <img src="img/balmov/balmov01.png">
-  </div>
-
-  <div class="body-img">
       <img src="img/balmov/balmov04.png">
-  </div>
 
-  <div>
-    <!-- <iframe src="https://player.vimeo.com/video/181492060?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/181492060?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-  </div>
 
 </div>
 
 </body>
+</html>
