--- a/elascreen.html
+++ b/elascreen.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
   <h2>Elascreen</h2>
 
   <p>ElaScreen uses a elastic screen to give user a tangible experience with natural force feedback. It quite works similar to a 2D touchpad but enables 3-dimensional input by pressing and pulling action on the screen. It can be utilized for navigation of 3-dimensional information such as CAD models, and also for implementing force feedback on information visualization.</p>
 
-  <a target="_blank" rel="noopener noreferrer" href="http://dl.acm.org/citation.cfm?id=2468590">SIGCHI2013, ElaScreen: Exploring Multi-dimensional Data using Elastic Screen</p>
+  <p><a target="_blank" rel="noopener noreferrer" href="http://dl.acm.org/citation.cfm?id=2468590">SIGCHI2013, ElaScreen: Exploring Multi-dimensional Data using Elastic Screen</p>
 
-  <div class="body-img">
+    <p><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/7HCb7h9UFVo">Video link (youtube.com)</a></p>
+
+
       <img src="img/elascreen/elascreen01.png">
-  </div>
 
-  <div class="body-img">
       <img src="img/elascreen/elascreen02.png">
-  </div>
-
-  <div>
-    <iframe width="640" height="360" src="https://www.youtube.com/embed/7HCb7h9UFVo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
 
 </div>
 
 </body>
+</html>
