--- a/fragments.html
+++ b/fragments.html
@@ -1,53 +1,40 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
-  <h2>Fragments, with Rodger Luo (<a target="_blank" rel="noopener noreferrer" href="http://rodgerluo.com">rodgerluo.com</a>)</h2>
+  <h2>Fragments, with <a target="_blank" rel="noopener noreferrer" href="http://rodgerluo.com">Rodger Luo</a></h2>
+
+  <p>Quoting Rodger's description:</p>
 
   <p>"Fragments is a multi-viewpoint video aiming to reformulate 2d image from 3d space and to create new approaches for future storytelling. This project provides a unique experience for the audience to observe a real-time multi-viewpoint video, which is produced by mixing three different videos using OpenGL shader functionality and a lenticular film. The rendering of each video involves capturing one common object from many different perspectives."</p>
 
   <p>"In terms of the object, the process begins with randomly taking segmentations in 3D space followed by a modified Convex Hull algorithm to create an asymmetric structure with different regions of the image (the scene) textured on each panel. Using fragmented pieces of the scene introduces a method in cubism: combining different perspectives in one view. Each fragment transforms in time with controlled parameters, providing a dynamic scene. With fragments of the scene not only changing by themselves but also by the position of the audience, this work shows tries to reveal hidden aesthetics of a scene. By stitching fragments that change over time and space, one could observe different aspects the original scene."</p>
 
-  <p>- From Rodger's video description at Vimeo
+    <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/171193854">Video link 1 (vimeo.com)</a></p>
+    <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/191299579">Video link 2 (vimeo.com)</a></p>
 
 
-  <div class="body-img">
       <img src="img/frag/frag01.png">
-  </div>
 
-  <div class="body-img">
       <img src="img/frag/frag02.png">
-  </div>
 
-  <div class="body-img">
       <img src="img/frag/frag03.png">
-  </div>
-
-  <div>
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/171193854?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-    <!-- <iframe src="https://player.vimeo.com/video/171193854?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-  </div>
-
-  <div>
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/191299579?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-    <!-- <iframe src="https://player.vimeo.com/video/191299579?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-  </div>
 
 </div>
 
 </body>
+</html>
