--- a/index.html
+++ b/index.html
@@ -1,71 +1,56 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="list-container">
 
-  <div class="body-img">
     <a href="balanced_movement2.html">
+      <div class="list-title">Balanced Movement</div>
       <img src="img/balmov2_preview.png">
-      Balanced Movement
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="wavefront.html">
+      <div class="list-title">Wavefront</div>
       <img src="img/wavefront_preview.jpg">
-      Wavefront
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="scivis.html">
+      <div class="list-title">Scientific Visualization in VR environment</div>
       <img src="img/vdv_preview.jpg">
-      Scientific Visualization in VR environment
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="reconstruction.html">
+      <div class="list-title">Reconstruction</div>
       <img src="img/recon_preview.png">
-      Reconstruction
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="fragments.html">
+      <div class="list-title">Fragments</div>
       <img src="img/frag_preview.png">
-      Fragments
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="ancient_stains.html">
+      <div class="list-title">Ancient Stains</div>
       <img src="img/stains_preview.png">
-      Ancient Stains
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="spherical_flocking.html">
+      <div class="list-title">Spherical Flocking</div>
       <img src="img/flocking_preview.png">
-      Spherical Flocking
     </a>
-  </div>
 
 </div>
 
@@ -74,4 +59,4 @@
 </div>
 
 </body>
-
+</html>
