--- a/page02.html
+++ b/page02.html
@@ -1,64 +1,51 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="list-container">
 
-  <div class="body-img">
     <a href="allosphere.html">
+      <div class="list-title">AlloSphere Research Group</div>
       <img src="img/sphere_preview.png">
-      AlloSphere Research Group
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="balanced_movement.html">
+      <div class="list-title">Balanced Movement</div>
       <img src="img/balmov_preview.png">
-      Balanced Movement
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="slitscan.html">
+      <div class="list-title">Slitscan Interface</div>
       <img src="img/slitscan_preview.png">
-      Slitscan Interface
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="amp.html">
+      <div class="list-title">Amp</div>
       <img src="img/amp_preview.png">
-      Amp
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="elascreen.html">
+      <div class="list-title">Elascreen Interface</div>
       <img src="img/elascreen_preview.png">
-      Elascreen Interface
     </a>
-  </div>
 
-  <div class="body-img">
     <a href="drumthewall.html">
+      <div class="list-title">Drum The Wall</div>
       <img src="img/drum_preview.png">
-      Drum The Wall
     </a>
-  </div>
 
 </div>
 
@@ -68,3 +55,4 @@
 
 </body>
 
+</html>
