--- a/reconstruction.html
+++ b/reconstruction.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
   <h2>Reconstruction</h2>
@@ -23,31 +22,19 @@
   Reconstruction tries to generate virtual geographical shapes from spectrum of frequencies that are observed from static materials such as image. The characteristic function written for this work takes a spectrum and returns a procedurally generated shape. The function mostly focuses on re-interpretation of spectrum into other dimensions, units, or parameters, while also taking consideration in fractal-like nature of geographic geometries. With generated shape, a short audio visual composition is presented, utilizing different rendering styles and camera position/movement.
   </p>
 
-  <div class="body-img">
+  <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/268367559">Video link (vimeo.com)</a></p>
+
       <img src="img/recon/recon01.png">
-  </div>
 
-  <div class="body-img">
       <img src="img/recon/recon02.png">
-  </div>
 
-  <div class="body-img">
       <img src="img/recon/recon03.png">
-  </div>
 
-  <div class="body-img">
       <img src="img/recon/recon04.png">
-  </div>
 
-  <div class="body-img">
       <img src="img/recon/recon05.png">
-  </div>
-
-  <div>
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/268367559?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-    <!-- <iframe src="https://player.vimeo.com/video/268367559?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-  </div>
 
 </div>
 
 </body>
+</html>
