--- a/wavefront.html
+++ b/wavefront.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
   <h2>Wavefront</h2>
@@ -27,24 +26,16 @@
 
   <p>Wavefront is a full immersive audiovisual presented in <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere</a>. Three dimensional wavelets are designed with the inspiration from ocean waves. Then a large number of them are spawned in space, creating a complex scenary with the full surround visual and spatialized sound.</p>
 
-  <p>DOCUMENTATION IN PROGRESS</p>
 
-  <div class="body-img">
       <img src="img/wavefront/wf_01.jpg">
-  </div>
 
-  <div class="body-img">
       <img src="img/wavefront/wf_02.jpg">
-  </div>
 
-  <div class="body-img">
       <img src="img/wavefront/wf_03.jpg">
-  </div>
 
-  <div class="body-img">
       <img src="img/wavefront/wf_04.jpg">
-  </div>
 
 </div>
 
 </body>
+</html>
