--- a/ancient_stains.html
+++ b/ancient_stains.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
   <h2>Ancient Stains</h2>
 
   <p>Reaction and Diffusion of two chemicals (Barkley Turbulance) make a dynamic 3D pattern in space and will be observed with a kinetoscope. Kinetoscope sets up limited view pose and dark surroundings so that more spatial feeling than merely looking at a monitor is possible. Pixelized visual style combined with kinetoscope structure tries to present the act of observation in limited viewpoint and low resolution.</p>
 
-  <div class="body-img">
-      <img src="img/stains/stains01.png">
-  </div>
- 
-  <div class="body-img">
-      <img src="img/stains/stains02.png">
-  </div>
+  <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/130527701">Video link (vimeo.com)</a></p>
 
-  <div>
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/130527701?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-    <!-- <iframe src="https://player.vimeo.com/video/130527701?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>  -->
-  </div>
+  <img src="img/stains/stains01.png">
+ 
+  <img src="img/stains/stains02.png">
+
 
 </div>
 
 </body>
+</html>
