--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
-  <h2>Balanced Movement</h2>
+    <h2>Balanced Movement</h2>
 
-  <p>
-  - Realtime audiovisual, Custom C++ software<br>
-  - Curved screen projection with 2 projectors<br>
-  - 3360 &#215; 1080 resolution video, 2 Channel audio
-  </p>
+    <p>
+    - Realtime audiovisual, Custom C++ software<br>
+    - Curved screen projection with 2 projectors<br>
+    - 3360 &#215; 1080 resolution video, 2 Channel audio<br>
+    - <a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/348973919">Video link (vimeo.com)</a>
+</p>
 
-  <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was changed and the software was modified to show the work on a curved projection screen. Balanced Movement was exhibited at the Media Arts and Technology End of Year Show 2019, UC Santa Barbara.</p>
+    <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was changed and the software was modified to show the work on a curved projection screen. Balanced Movement was exhibited at the Media Arts and Technology End of Year Show 2019, UC Santa Barbara.</p>
 
-  <div class="body-img">
-      <img src="img/balmov/bm3.png">
-  </div>
-
-  <div class="body-img">
-      <img src="img/balmov/bm_eoys_01.jpg">
-  </div>
-
-  <div class="body-img">
-      <img src="img/balmov/bm_eoys_02.jpg">
-  </div>
-
-  <div>
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/348973919?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-  </div>
+    <p><img src="img/balmov/bm3.png"></p>
+    <p><img src="img/balmov/bm_eoys_01.jpg"></p>
+    <p><img src="img/balmov/bm_eoys_02.jpg"></p>
 
 </div>
 
 </body>
+</html>
