--- a/slitscan.html
+++ b/slitscan.html
@@ -1,40 +1,33 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
   <h2>Slitscan Interface</h2>
 
   <p>Observing the space front of a touch screen enables the touch screen to have an extra context for input. While normal touch screens only have TOUCHED/NOT_TOUCHED input variety, touch screen with multiple layered slit scanning can utilize the trajectory of fingertip. This Research was funded by Hyundai NGV.</p>
 
+  <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/81943945">Video link (vimeo.com)</a></p>
 
-  <div class="body-img">
       <img src="img/slitscan/slitscan01.png">
-  </div>
 
-  <div class="body-img">
       <img src="img/slitscan/slitscan02.png">
-  </div>
 
-  <div>
-    <!-- <iframe src="https://player.vimeo.com/video/81943945?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/81943945?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-  </div>
 
 </div>
 
 </body>
+</html>
