--- a/spherical_flocking.html
+++ b/spherical_flocking.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
-
+<html lang=en>
 <head>
-  <html lang=en>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keehong Youn</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Keehong Youn</title>
+<link rel="stylesheet" href="style.css">
+  
+</head>
 <body>
 
-<div class="nav-container">
+<nav>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
-</div>
+</nav>
 
 <div class="content-container">
   <h2>Spherical Flocking</h2>
 
   <p>Flocking rules simulate behavior of fishes underwater. The scene gets rendered in full surrounding spherical viewport so that it can be projected onto the inner surface of 5-meter-radius sphere, the AlloSphere at UCSB. Positions of fishes will also spatialize the sound inside the sphere.</p>
 
+  <p><a target="_blank" rel="noopener noreferrer" href="https://vimeo.com/131404811">Video link (vimeo.com)</a></p>
 
-  <div class="body-img">
       <img src="img/flocking/flocking01.png">
-  </div>
 
-  <div class="body-img">
       <img src="img/flocking/flocking02.png">
-  </div>
-
-  <div>
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/131404811?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-    <!-- <iframe src="https://player.vimeo.com/video/131404811?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-  </div>
 
 </div>
 
 </body>
+</html>
