--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <div class="list-container">
 
+    <p>&nbsp;</p>
+
     <a href="balanced_movement2.html">
       <div class="list-title">Balanced Movement</div>
       <img src="img/balmov2_preview.png">
@@ -28,7 +30,7 @@
     </a>
 
     <a href="scivis.html">
-      <div class="list-title">Scientific Visualization in VR environment</div>
+      <div class="list-title">Scientific Visualization in VR</div>
       <img src="img/vdv_preview.jpg">
     </a>
 
