--- a/page02.html
+++ b/page02.html
@@ -17,6 +17,8 @@
 
 <div class="list-container">
 
+    <p>&nbsp;</p>
+
     <a href="allosphere.html">
       <div class="list-title">AlloSphere Research Group</div>
       <img src="img/sphere_preview.png">
