--- a/scivis.html
+++ b/scivis.html
@@ -17,7 +17,7 @@
 
 <div class="content-container">
 
-    <h2>Scientific Visualization of Simulation Data in VR environment</h2>
+    <h2>Scientific Visualization of Simulation Data in VR</h2>
 
   <p>
   - Stereoscopic rendering of 3D material simulation data<br>
