--- a/page02.html
+++ b/page02.html
@@ -51,9 +51,9 @@
 
 </div>
 
-<div class="content-container">
+<div class="page_nav">
 <a href="index.html">[1]</a> [2]
-</div>
+</footer>
 
 </body>
 
