re-align selects for mobile

--- a/other/caltrain.html
+++ b/other/caltrain.html
@@ -65,23 +65,27 @@ body img {
 
 <h2>Caltrain Schedule</h2>
 
-<p style="text-align: center">
-From:
-<select id="from">
-<!-- to be filled with js -->
-</select>
-&nbsp;&nbsp;&nbsp;&nbsp;
-To:
-<select id="to">
-<!-- to be filled with js -->
-</select>
-&nbsp;&nbsp;&nbsp;&nbsp;
-On:
-<select id="on">
-    <option value=0>Weekdays</option>
-    <option value=1>Weekends</option>
-</select>
-</p>
+<table style="text-align: center; margin: 0 auto">
+    <tbody>
+        <tr>
+            <td>From</td>
+            <td><select id="from"></select></td>
+        </tr>
+        <tr>
+            <td>To</td>
+            <td><select id="to"></select></td>
+        </tr>
+        <tr>
+            <td>On</td>
+            <td><select id="on">
+                <option value=0>Weekdays</option>
+                <option value=1>Weekends</option>
+            </select></td>
+        </tr>
+    </tbody>
+</table>
+
+<br>
 
 <table style="text-align: center; margin: 0 auto">
     <thead>
