--- a/other/caltrain.html
+++ b/other/caltrain.html
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  max-width: 40em; /* 0.8 of 50 */
+  max-width: 45em; /* 0.9 of 50 */
 
   color: #303030;
   font: 1em sans-serif;
@@ -28,18 +28,18 @@ body {
   font-weight: normal;
 
   margin: 2em auto;
-  padding: 0 1em; /* +1em left and right makes 40 */
+  padding: 0;
 }
 
 body img {
   display: block;
-  max-width: 38em; /* 0.76 of 50 */
+  max-width: 40em; /* 0.8 of 50 */
   margin: 0 auto;
   padding: 0.5em 0;
 }
 
 .imgcaption {
-  max-width: 34em; /* 0.68 of 50 */
+  max-width: 35em; /* 0.7 of 50 */
   margin: -0.5em auto 0.5em auto; /* relay img's 0.5em padding bottom*/
   font-size: small;
   text-align: center;
@@ -48,14 +48,14 @@ body img {
 /* scrollbar hack #2 */
 @media screen and (max-width: 50em) {
     body {
-        max-width: 80vw
+        max-width: 90vw
     }
     body img {
-        max-width: 76vw;
+        max-width: 80vw;
         margin: 0 auto;
     }
     .imgcaption {
-      max-width: 68vw;
+      max-width: 70vw;
     }
 }
 
