--- a/dlang01.html
+++ b/dlang01.html
@@ -97,9 +97,12 @@ pre code {
 
 <p>D looked nice, especially the easy integration with C code seemed promising. While having most of the good points of C and C++, it also has standard build system and package manager. Here I am trying find out if it is pleasant to create a D application while getting part of the functionality from existing C libraries.</p>
 
+<p><a target="_blank" rel="noopener noreferrer" href="https://dlang.org">D language</a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="https://dub.pm">DUB, D language package manager</a></p>
+
 <h2>DMD</h2>
 
-<p>DMD can compile D code.</p>
+<p>DMD is official reference compiler for D.</p>
 
 <pre><code>File: main.d
 
@@ -127,7 +130,7 @@ Hello World!
 
 <h2>DUB</h2>
 
-<p>For complicated projects of course a manager is necessary. DUB manages both the project and the dependencies.</p>
+<p>For complicated projects a project/package manager is necessary. DUB manages both the project and the dependencies.</p>
 
 <pre><code>Terminal: initializing a project with dub
 
