add wrapping for code

--- a/blank.html
+++ b/blank.html
@@ -47,11 +47,7 @@ code {
 pre code {
     display: block;
     padding: 1.0em;
-}
-
-pre code .subject {
-    font-weight: bold;
-    text-decoration: underline;
+    white-space: pre-wrap;
 }
 
 .imgcaption {
@@ -103,7 +99,7 @@ pre code .subject {
 <p>
 this is paragraph <code>with code inside</code>
 </p>
-<pre><code>this is a code I write
+<pre><code>this is a code I write some long line can be there and it will wrap
 multiline
 < > works
 </code></pre>
