lighter font weight

--- a/blank.html
+++ b/blank.html
@@ -15,7 +15,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
+  font-weight: lighter;
 }
 
 body {
@@ -23,8 +23,8 @@ body {
 
   color: #303030;
   font: 1em sans-serif;
-  line-height: 1.5;
-  font-weight: normal;
+  line-height: 1.8;
+  font-weight: lighter;
 
   margin: 2em auto;
   padding: 0 0 10em 0;
@@ -46,6 +46,7 @@ code {
 
 pre code {
     display: block;
+    line-height: 1.5;
     padding: 1.0em;
     white-space: pre-wrap;
 }
@@ -55,6 +56,13 @@ pre code {
   margin: -0.5em auto 0.5em auto; /* relay img's 0.5em padding bottom*/
   font-size: small;
   text-align: center;
+}
+
+.note {
+    font: 1em monospace;
+    color: #202020;
+    background-color: #F0E080;
+    padding: 1em;
 }
 
 /* scrollbar hack #2 */
