--- a/dlang01.html
+++ b/dlang01.html
@@ -56,6 +56,7 @@ pre code {
   margin: -0.5em auto 0.5em auto; /* relay img's 0.5em padding bottom*/
   font-size: small;
   text-align: center;
+  line-height: 1.5;
 }
 
 .note {
