--- a/dlang01.html
+++ b/dlang01.html
@@ -193,7 +193,7 @@ Edit source/app.d to start your project.
 <p>On upcoming next page, connecting C and D will be covered.</p>
 
 <!-- <p class="note">Link: to be posted</p> -->
-<p><a target="_blank" rel="noopener noreferrer" href="dlang02.html">D Language Series 02: Interfacing with C</a></p>
+<p><a href="dlang02.html">D Language Series 02: Interfacing with C</a></p>
 
 <p style="text-align:right;">Jan. 2020</p>
 
